basic form work complete with confirmation page

--- a/assets/contact-form.html
+++ b/assets/contact-form.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact the WEBSITE</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    TEST
+    <h1>Contact Us</h1>
+    <form action="./confirmation.html">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" value="Johnathan Doenaparte">
+        <br><br>
+        <label for="email">email:</label>
+        <input type="text" id="email" name="email" value="JohnDoe@email.com">
+        <br><br>
+        <input type="submit" value="Sumbit">
+    </form>
 </body>
 </html>
