--- a/index.html
+++ b/index.html
@@ -1,18 +1,36 @@
 <!DOCTYPE html>
 <html lang="en-us">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>The WEBSITE</title>
 </head>
+
 <body>
     <header class="header">
-
+        <h1>The WEBSITE</h1>
+        <nav>
+            <ul>
+                <li>Test1</li>
+                <li>Test2</li>
+                <li>Test3</li>
+            </ul>
+        </nav>
     </header>
+
+    <section>
+        <h2>Contact Us</h2>
+
+        <p>To contact us, you can fill out your information <a href="./assets/contact-form.html" target="_blank"  rel="noreferrer noopener">HERE</a> and we will get back to you shortly.</p>
+        
+    </section>
 
     <footer>
 
     </footer>
 </body>
+
 </html>
